<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.usjt.arqdesis.sistemapredial.LoginActivity">
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.usjt.arqdesis.sistemapredial.LoginActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_message"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_message"/>

    <EditText
        android:id="@+id/password_message"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_message" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_button"
        android:onClick="requestLogin"/>

</LinearLayout>